k8s/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-dashboard-screenshot-nginx
spec:
  selector:
    app: ha-dashboard-screenshot-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
